v20.3.1
- Implement advanced recording title search

v20.3.0
- Kodi inputstream API update to version 3.2.0
- Kodi PVR API update to version 8.0.2

v20.2.4
- All sorting by recording directory
- Allow faster reconnect attempts on startup

v20.2.3
- Remove backend forced season/episode support

v20.2.2
- Send channel groups in NextPVR order

v20.2.1
- Used cached group counts for GetChannelGroupsAmount()

v20.2.0
- Translation updates by Weblate
- Kodi main API update to version 2.0.0

v20.1.3
- Fix for Kodi marking in-progress recordings as watched

v20.1.2
- Remove obsolete V4 settings from settings.xml
- Load and save only V5 settings
- Remove conditional settings from code
- Remove obsolete V4 timeshifting modes

v20.1.1
- Block access for v4 backend users
- Don't try and reconnect server after sleep announced
- Handle situations where Kodi requests timer updates without a recording update
- Document no provider support
- Remove EDL limit check
- Support new API XML to get recording specific art

v20.1.0
- Kodi API to 8.0.0
  - Add supports recordings delete capability
  - Enforce EDL limits

v20.0.0
- Translations updates from Weblate
  - be_by, ko_kr, ru_ru
  - To allow also addon.xml content update by Weblate
- Changed test builds to 'Kodi 20 Nexus'
- Increased version to 20.0.0
  - With start of Kodi 20 Nexus, takes addon as major the same version number as Kodi.
    This done to know easier to which Kodi the addon works.

v8.2.9
- Fix timer default override

v8.2.8
- Use recording size available in NextPVR API 5.2
- Create radio groups using API 5.2

v8.2.7
- Check if recording groups have already been added

v8.2.6
- Kodi has a limit of 32 EDL breaks in PVR

v8.2.5
- Update timer from a recurring recording
- Remove extra parameter on log call
- Allow records with year as season

v8.2.4
- Language update from Weblate

v8.2.3
- Add directory for pending recordings server API update

v8.2.2
- Missing break, keyword searches became advanced text searches
